# ldw-full-games

./: README.md  main.py  pyproject.toml
apps/backend/: alembic.ini  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 7774e03efabb_initial_schema.py  93ed13d01c40_initial_schema.py
apps/backend/src/: .env  app.py  database.py
apps/backend/src/models/: game.py  host.py  player.py
apps/backend/src/routes/: games.py  health.py  hosts.py  players.py
apps/backend/src/schemas/: game_schema.py  host_schema.py  player_schema.py
apps/frontend/: main.py  pyproject.toml
apps/frontend/src/: api.py  state.py
apps/frontend/src/components/: info_card.py  navbar.py
apps/frontend/src/views/: games_view.py  health_view.py  home_view.py  hosts_view.py  players_view.py
apps/landing-page/: index.html
