[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "flasgger>=0.9.7.1",
    "flask>=3.1.3",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
]
